# tallytail

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  precommit.ps1  tickets.txt
client/: Cargo.toml  index.html
client/src/: lib.rs
core_lib/: Cargo.toml
core_lib/src/: add_asset_args.rs  add_asset_input.rs  allocation_diagram_data.rs  allocation_record_input.rs  category.rs  category_value.rs  configure_categories_input.rs  lib.rs  listed_transaction.rs  log_transaction_input.rs  portfolio_item.rs  request_list.rs  transaction_asset.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop_app/: Cargo.toml
desktop_app/src/: desktop_backend.rs  main.rs
infra_lib/: Cargo.toml
infra_lib/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
src/app/: add_asset_input.rs  allocation_diagram_data.rs  allocation_record_input.rs  asset.rs  asset_reference.rs  asset_service.rs  category.rs  category_assignment.rs  category_value.rs  configure_categories_input.rs  error.rs  mod.rs  named_distribution.rs  repository.rs
src/backend/: server.rs
src/infra/: mock_asset_repository.rs  mod.rs  sqlite_asset_repository.rs
src/ui/desktop_app/: desktop_app.rs  distribution_history.rs  mod.rs  png.rs
src/ui/egui/: app.rs  mod.rs  percent_stacked_bar_chart.rs  png.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui_lib/: Cargo.toml
ui_lib/src/: app_backend.rs  eframe_app.rs  lib.rs  percent_stacked_bar_chart.rs  png.rs
web_back_end/: Cargo.toml
web_back_end/src/: error.rs  main.rs
web_front_end/: Cargo.toml  index.html
web_front_end/src/: lib.rs  web_backend.rs
