[package]
name = "asset_allocation_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["datepicker"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
jiff = { version = "0.2.24", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
serde = { version = "1", features = ["derive"] }
ron = "0.12.1"
png = "0.18.1"
