[package]
name = "asset_allocation_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["datepicker"] }
jiff = { version = "0.2.24", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
serde = { version = "1", features = ["derive"] }
ron = "0.12.1"
png = "0.18.1"
web-sys = "0.3.98"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
