[package]
name = "web_back_end"
version = "0.1.0"
edition = "2024"

[dependencies]
core_lib = { path = "../core_lib" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
ron = "0.8"
eyre = "0.6"