[package]
name = "web_front_end"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core_lib = { path = "../core_lib" }
ui_lib = { path = "../ui_lib" }
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "web_screen_reader",
] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
eyre = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
paste = "1.0.15"
